--- a/index.html
+++ b/index.html
@@ -219,6 +219,36 @@
         </div>
     </section>
 
+    <section>
+        <div class="container">
+            <h3 id="clients">Clients</h3>
+            <div class="client-controls">
+                <div class="client-control-next"><img src="../portfolio/images/right arrow.jpg" alt="next"></div>
+                <div class="client-control-previous"><img src="../portfolio/images/left arrow.jpg" alt="prev"></div>
+            </div>
+
+            <div class="clients-belt">
+                <div class="client-unit">
+                    <div class="client-pic">
+                        <img src="../portfolio/images/face1.jpg" alt="client-pic">
+                        <strong class="client-name">Clark Kent</strong>
+                        <em class="client-title">Director Of Engineering Company</em>
+                    </div>
+                    <div class="client-info">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis vel ligula cursus quam feugiat facilisis. Nulla ullamcorper dui vel ultricies vehicula. Etiam eget ex auctor, viverra nunc a, mattis nunc. Nunc posuere enim ac quam
+                            cursus, hendrerit tincidunt risus scelerisque. </p>
+                    </div>
+                </div>
+            </div>
+            <div class="clients-logos">
+                <div class="client-logo-1 active-client"></div>
+                <div class="client-logo-2"></div>
+                <div class="client-logo-3"></div>
+                <div class="client-logo-4"></div>
+            </div>
+        </div>
+    </section>
+
     <footer>
         <div class="foot">
             <div class="logo">
@@ -237,6 +267,7 @@
         </div>
     </footer>
 
+    <script src="../portfolio/js/jquery-3.2.1.min.js"></script>
     <script src="../portfolio/js/script.js"></script>
 </body>
 
