--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
 
                 <a href="" class="thumb-unit-1">
                     <div class="thumb-overlay">
-                        <div><strong>Weather Dashboard</strong></div>
+                        <div class="text"><strong>Weather Dashboard</strong></div>
                         <div class="zoom-icon"></div>
                     </div>
                 </a>
@@ -219,7 +219,7 @@
         </div>
     </section>
 
-    <section>
+    <section class="section-clients">
         <div class="container">
             <h3 id="clients">Clients</h3>
             <div class="client-controls">
