--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="S.Vasilev">
 
     <title>Portfolio</title>
-    <link rel="stylesheet" href="{{site.baseurl}}/portfolio/css/style.css">
+    <link rel="stylesheet" href="{{site.baseurl}}/css/style.css">
 </head>
 
 <body>
