--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
         <div class="container">
             <div id="logo">
-                <img src="{{site.baseurl}}/images/watermark.png" alt="logo.jpg">
+                <img src="images/watermark.png" alt="logo.jpg">
             </div>
 
             <nav>
