--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="S.Vasilev">
 
     <title>Portfolio</title>
-    <link rel="stylesheet" href="{{site.baseurl}}/Portfolio/css/style.css">
+    <link rel="stylesheet" href="./Portfolio/css/style.css">
 </head>
 
 <body>
@@ -37,11 +37,11 @@
             <h3>About Myself</h3>
 
             <div class="icons">
-                <div class="pencil-icon"><img src="{{site.baseurl}}/Portfolio/images/pen_logo.jpg" alt="pen.jpg"></div>
-                <div class="mouse-icon"><img src="{{site.baseurl}}/Portfolio/images/mouse_logo.jpg" alt="mouse.jpg"></div>
-                <div class="mypic"><img src="{{site.baseurl}}/Portfolio/images/mypic.jpg" alt="pic.jpg"></div>
-                <div class="browser-icon"><img src="{{site.baseurl}}/Portfolio/images/video_logo.jpg" alt="browser.jpg"></div>
-                <div class="video-icon"><img src="{{site.baseurl}}/Portfolio/images/media_logo.jpg" alt="video.jpg"></div>
+                <div class="pencil-icon"><img src="./Portfolio/images/pen_logo.jpg" alt="pen.jpg"></div>
+                <div class="mouse-icon"><img src="./Portfolio/images/mouse_logo.jpg" alt="mouse.jpg"></div>
+                <div class="mypic"><img src="./Portfolio/images/mypic.jpg" alt="pic.jpg"></div>
+                <div class="browser-icon"><img src="./Portfolio/images/video_logo.jpg" alt="browser.jpg"></div>
+                <div class="video-icon"><img src="./Portfolio/images/media_logo.jpg" alt="video.jpg"></div>
             </div>
 
             <div class="clarification">
@@ -223,14 +223,14 @@
         <div class="container">
             <h3 id="clients">Clients</h3>
             <div class="client-controls">
-                <div class="client-control-next"><img src="{{site.baseurl}}/Portfolio/images/right arrow.jpg" alt="next"></div>
-                <div class="client-control-previous"><img src="{{site.baseurl}}/Portfolio/images/left arrow.jpg" alt="prev"></div>
+                <div class="client-control-next"><img src="./Portfolio/images/right arrow.jpg" alt="next"></div>
+                <div class="client-control-previous"><img src="./Portfolio/images/left arrow.jpg" alt="prev"></div>
             </div>
 
             <div class="clients-belt">
                 <div class="client-unit">
                     <div class="client-pic">
-                        <img src="{{site.baseurl}}/Portfolio/images/face1.jpg" alt="client-pic">
+                        <img src="./Portfolio/images/face1.jpg" alt="client-pic">
                         <strong class="client-name">Clark Kent</strong>
                         <em class="client-title">Director Of Engineering Company</em>
                     </div>
@@ -252,7 +252,7 @@
     <footer>
         <div class="foot">
             <div class="logo">
-                <img src="{{site.baseurl}}/Portfolio/images/watermark.png" alt="logo.jpg">
+                <img src="./Portfolio/images/watermark.png" alt="logo.jpg">
             </div>
             <div class="content-wrap">
                 <nav>
@@ -267,8 +267,8 @@
         </div>
     </footer>
 
-    <script src="{{site.baseurl}}/Portfolio/js/jquery-3.2.1.min.js"></script>
-    <script src="{{site.baseurl}}/Portfolio/js/script.js"></script>
+    <script src="./Portfolio/js/jquery-3.2.1.min.js"></script>
+    <script src="./Portfolio/js/script.js"></script>
 </body>
 
 </html>
